# fs_monitor

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  create-a-detailed-plan-humble-canyon.md  monitor.example.toml  plan.md  pyproject.toml
.github/workflows/: ci.yml
monitor/: __main__.py  app.py  collector.py  config.py  ebpf.py  enrichment.py  fd.py  fswatch.py  history.py  logging_config.py  maps.py  metrics.py  middleware.py  netwatch.py  scanner.py  security.py  signaling.py  sockets.py  state.py  types.py
monitor/api/: __init__.py  health.py  network.py  processes.py  security.py  signal.py  timeline.py  ws.py
packaging/: monitor.service
scripts/: bench_sockets.py
tests/: test_app.py  test_collector.py  test_enrichment.py  test_fd.py  test_fswatch.py  test_maps.py  test_netwatch.py  test_scanner.py  test_security.py  test_signaling.py  test_sockets.py
web/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.js  vitest.config.js
web/src/: detail.jsx  error-boundary.jsx  footer.jsx  main.jsx  network.jsx  sparkline.jsx  splitter.jsx  styles.css  timeline.jsx  tree-builder.js  tree-builder.test.js  tree.jsx
