[project]
name = "monitor"
version = "0.1.0"
description = "Local browser-based Linux process & open-file explorer"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "psutil>=5.9",
    "prometheus-client>=0.20",
    "python-json-logger>=2.0",
]

[project.scripts]
monitor = "monitor.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["monitor*"]

[tool.setuptools.package-data]
monitor = ["static/**/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = [
  "E501",   # line length handled by formatter, not blocker
  "B008",   # FastAPI uses Depends() defaults
  "SIM105", # contextlib.suppress is less readable than try/except/pass here
  "SIM117", # nested `with` for TestClient + websocket_connect is idiomatic
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
